helm/monitoring/prometheus/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  type: ClusterIP
  selector:
    app: prometheus-server
  ports:
    - port: 9090
      targetPort: 9090
